Fix horizontal body overflow.

--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ body, body > *, .header > *, .main > * {
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
+    max-height: 100vh;
+    max-width: 100vw;
     box-sizing: border-box;
     grid-template: 1fr 5fr / 1fr 5fr;
     font-family: Roboto;
@@ -72,7 +72,7 @@ body {
     align-content: center;
 }
 
-.profile {
+img.profile {
     border-radius: 100%;
 }
 
